force-app/main/default/objects/Opportunity/fields/Renewal_And_Periodic__c.field-meta.xml
<CustomField>
    <fullName>Renewal_And_Periodic__c</fullName>
    <description>If its renewal and periodic (panda docs)</description>
    <formula>IF(
    AND(
        TEXT(Contract_Type__c) = &quot;Periodic&quot;,
        Automatic_Renewal__c = TRUE
    ),
    &quot;true&quot;,
    &quot;false&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal And Periodic</label>
    <type>Text</type>
</CustomField>