force-app/main/default/objects/Opportunity/fields/Renewal_end_date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_end_date__c</fullName>
    <description>Calcul the end date of the renewal contract (panda docs)</description>
    <formula>DATE(
  YEAR(End_Date__c) + FLOOR((MONTH(End_Date__c) + Renewal_Period_Months__c - 1) / 12),
  MOD(MONTH(End_Date__c) + Renewal_Period_Months__c - 1, 12) + 1,
  DAY(End_Date__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal end date</label>
    <type>Date</type>
</CustomField>