force-app/main/default/objects/Opportunity/fields/Renewal_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Start_Date__c</fullName>
    <inlineHelpText>Number of months before contract end date to initiate the renewal process</inlineHelpText>
    <label>Renewal Notice Period (Months)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>