force-app/main/default/objects/Opportunity/fields/Restoration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Restoration_Fee__c</fullName>
    <label>Restoration Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>