force-app/main/default/objects/Opportunity/fields/SubSource__c.field-meta.xml
<CustomField>
    <fullName>SubSource__c</fullName>
    <label>Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>Direct Calls</fullName>
            </value>
            <value>
                <fullName>Outbound calls</fullName>
            </value>
            <value>
                <fullName>Word of mouth</fullName>
            </value>
            <value>
                <fullName>Spacing</fullName>
            </value>
            <value>
                <fullName>Spacenter</fullName>
            </value>
            <value>
                <fullName>Flexspace</fullName>
            </value>
            <value>
                <fullName>Marketing emails</fullName>
            </value>
            <value>
                <fullName>Telidelet</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>Meetingz</fullName>
            </value>
            <value>
                <fullName>Referral( from ROOMS)</fullName>
            </value>
            <value>
                <fullName>Kishourit</fullName>
            </value>
            <value>
                <fullName>Abandoned Calls</fullName>
            </value>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>Flyers</fullName>
            </value>
            <value>
                <fullName>Roll Up</fullName>
            </value>
            <value>
                <fullName>Friend Bring Friend</fullName>
            </value>
            <value>
                <fullName>Linkedin Inmails</fullName>
            </value>
            <value>
                <fullName>Walkin</fullName>
            </value>
            <value>
                <fullName>Returning customer</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Nioud</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>