force-app/main/default/objects/Opportunity/fields/Temporary_Product_Check__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Product_Check__c</fullName>
    <formula>IF( Temporary_Product_Count__c &gt;0, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temporary Products Check</label>
    <type>Text</type>
</CustomField>