force-app/main/default/objects/Opportunity/fields/Temporary_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Product_Count__c</fullName>
    <label>Temporary Product Count</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Temporary__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>