force-app/main/default/objects/Opportunity/fields/Total_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposit__c</fullName>
    <description>Formula for total of deposit for pikadone (panda docs)</description>
    <formula>IF(
    OR(ISBLANK(Calculated_Deposit__c), Calculated_Deposit__c = 0),
    IF(
        ISBLANK(DepositAmount__c),
        0,
        DepositAmount__c
    ),
    Calculated_Deposit__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>