force-app/main/default/objects/Opportunity/fields/Total_List_Amount_For_Standard__c.field-meta.xml
<CustomField>
    <fullName>Total_List_Amount_For_Standard__c</fullName>
    <label>Total List Amount Standard</label>
    <summarizedField>OpportunityLineItem.Standard_List_Sum__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Temporary__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Products_Type__c</field>
        <operation>equals</operation>
        <value>Standard Products</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>