force-app/main/default/objects/Opportunity/fields/Total_Monthly_Amount_For_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Amount_For_Deposit__c</fullName>
    <label>Total Monthly Amount For Deposit</label>
    <summarizedField>OpportunityLineItem.Monthly_Total_Sum__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Temporary__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Products_Type__c</field>
        <operation>equals</operation>
        <value>Standard Products</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>