force-app/main/default/objects/Opportunity/fields/Total_Price_Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Management_Fee__c</fullName>
    <description>Total Price Management Fee (panda docs)</description>
    <label>Total Price Management Fee</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Sub_Type__c</field>
        <operation>equals</operation>
        <value>Management Fee</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>