force-app/main/default/objects/Opportunity/fields/Total_Price_Monthly_And_Periodic__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Monthly_And_Periodic__c</fullName>
    <description>This field calculate the total price for all product with the type monthly and periodic (panda docs)</description>
    <label>Total Price Monthly And Periodic</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Products_Type__c</field>
        <operation>equals</operation>
        <value>Standard Products, On demand Products</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>