force-app/main/default/objects/Opportunity/fields/Total_Price_Print_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Print_Units__c</fullName>
    <description>panda docs</description>
    <label>Total Price Print Units</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Sub_Type__c</field>
        <operation>equals</operation>
        <value>Print Units</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>