force-app/main/default/objects/Opportunity/fields/TotalPrice_Management_Per_Members__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice_Management_Per_Members__c</fullName>
    <description>panda docs</description>
    <formula>Total_Price_Management_Fee__c / Number_of_members__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalPrice Management Per Members</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>