force-app/main/default/objects/Opportunity/fields/Tour_end_date_and_time__c.field-meta.xml
<CustomField>
    <fullName>Tour_end_date_and_time__c</fullName>
    <label>Tour end date and time</label>
    <type>DateTime</type>
</CustomField>