force-app/main/default/objects/Opportunity/fields/Tour_Status__c.field-meta.xml
<CustomField>
    <fullName>Tour_Status__c</fullName>
    <label>Tour Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>