force-app/main/default/objects/Opportunity/fields/Type_CI__c.field-meta.xml
<CustomField>
    <fullName>Type_CI__c</fullName>
    <formula>IF(
  TEXT(Type) = &quot;New Business&quot;,
  &quot;🟢 New Business&quot;,
  IF(
    TEXT(Type) = &quot;Renewal&quot;,
    &quot;🔵 Renewal&quot;,
    TEXT(Type)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type CI</label>
    <type>Text</type>
</CustomField>