force-app/main/default/objects/Opportunity/fields/Where_did_the_customer_come_from__c.field-meta.xml
<CustomField>
    <fullName>Where_did_the_customer_come_from__c</fullName>
    <label>Where did the customer come from?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>