force-app/main/default/objects/Opportunity/recordTypes/On_demand_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>On_demand_Opportunity</fullName>
    <active>true</active>
    <businessProcess>On demand Sales process</businessProcess>
    <label>On demand Opportunity</label>
</RecordType>