force-app/main/default/objects/Opportunity/recordTypes/Serie_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Serie_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Serie sales process</businessProcess>
    <label>Series Opportunity</label>
</RecordType>