force-app/main/default/objects/Opportunity/recordTypes/Standard_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Standard_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <description>For standard or By meter</description>
    <label>Standard Opportunity</label>
</RecordType>