force-app/main/default/objects/Opportunity/validationRules/Add_products_To_continue.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_products_To_continue</fullName>
    <active>true</active>
    <errorConditionFormula>AND (NOT( OR(ISPICKVAL(StageName  , &apos;Moked&apos;),ISPICKVAL(StageName  , &apos;New&apos;), ISPICKVAL(StageName  , &apos;Tour scheduled&apos;), ISPICKVAL(StageName  , &apos;Reminder&apos;), ISPICKVAL(StageName  , &apos;Proposal&apos;), ISPICKVAL(StageName  , &apos;Package Builder&apos;),ISPICKVAL(StageName  , &apos;Negotiation&apos;),ISPICKVAL(StageName  , &apos;Closed Lost&apos;) )),  Product_Count__c =0)</errorConditionFormula>
    <errorMessage>Please Add products before moving to next stages, or revert to earlier stages</errorMessage>
</ValidationRule>