force-app/main/default/objects/Opportunity/validationRules/Closed_lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_lost</fullName>
    <active>true</active>
    <description>closed_lost_without_loss_reason OR loss_reason = Future potiential deal WITHOUT REMINDER DATE</description>
    <errorConditionFormula>OR(
    AND(
        ISPICKVAL(StageName, &quot;Closed Lost&quot;), 
        ISBLANK(TEXT(Loss_Reason__c))
    ),
    AND(
        ISPICKVAL(Loss_Reason__c, &quot;Future Potential Deal/Timing&quot;), 
        ISBLANK(Reminder_Date__c)
    )
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Please provide a loss reason if the stage is &quot;Closed Lost&quot; or a reminder date if the loss reason is &quot;Future Potential Deal/Timing&quot;.</errorMessage>
</ValidationRule>