force-app/main/default/objects/Opportunity/validationRules/Closed_Won_Account_Industry_Manadtory.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won_Account_Industry_Manadtory</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISBLANK(TEXT(Account.Industry )) ,   ISPICKVAL(StageName , &apos;Closed Won&apos;),  ISCHANGED(StageName ))</errorConditionFormula>
    <errorMessage>The Account&apos;s &apos;Industry&apos; Is mandatory before Close Won stage</errorMessage>
</ValidationRule>