force-app/main/default/objects/Opportunity/validationRules/CompanyID_empty_Contractreview.validationRule-meta.xml
<ValidationRule>
    <fullName>CompanyID_empty_Contractreview</fullName>
    <active>false</active>
    <description>Company Id is required from contract review stage</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(StageName, &quot;Contract Review&quot;),
        ISPICKVAL(StageName, &quot;Contract sent&quot;),
        ISPICKVAL(StageName, &quot;Deposit and Documents received&quot;)
    ),
    ISBLANK(Set_Up_Fee__c)
)</errorConditionFormula>
    <errorMessage>Company Id is required on this stage</errorMessage>
</ValidationRule>