force-app/main/default/objects/Opportunity/validationRules/Contract_Information_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Information_Required</fullName>
    <active>true</active>
    <description>in standard opportunity</description>
    <errorConditionFormula>AND(
    RecordType.Name = &quot;Standard Opportunity&quot;,
    OR(
        
        
        ISPICKVAL(StageName, &quot;Contract sent&quot;),
        ISPICKVAL(StageName, &quot;Closed Won&quot;),
        ISPICKVAL(StageName, &quot;Deposit and Documents received&quot;)
    ),
    ISBLANK(TEXT(Contract_Type__c))
)</errorConditionFormula>
    <errorDisplayField>Contract_Type__c</errorDisplayField>
    <errorMessage>Please fill out the Contract Type</errorMessage>
</ValidationRule>