force-app/main/default/objects/Opportunity/validationRules/Deposit_Mandatory_before_contract_Revie.validationRule-meta.xml
<ValidationRule>
    <fullName>Deposit_Mandatory_before_contract_Revie</fullName>
    <active>true</active>
    <errorConditionFormula>AND (  ISPICKVAL(StageName , &apos;Contract Review&apos;), ISNULL( DepositAmount__c ))</errorConditionFormula>
    <errorDisplayField>DepositAmount__c</errorDisplayField>
    <errorMessage>Please add deposit value before moving to contract review stage</errorMessage>
</ValidationRule>