force-app/main/default/objects/Opportunity/validationRules/Do_not_forget_Payment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_forget_Payment_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND (  ISPICKVAL( StageName , &apos;Closed Won&apos;) , ISNULL( Payment_Date__c ),  ISCHANGED(StageName ) )</errorConditionFormula>
    <errorDisplayField>Payment_Date__c</errorDisplayField>
    <errorMessage>Please add the payment date for non-Periodic/Monthly before closing the opportunity</errorMessage>
</ValidationRule>