force-app/main/default/objects/Opportunity/validationRules/Monthly_Contract_without_terminztion_not.validationRule-meta.xml
<ValidationRule>
    <fullName>Monthly_Contract_without_terminztion_not</fullName>
    <active>true</active>
    <description>Lease Termination Notice (Months) must be populated when contract type is monthly</description>
    <errorConditionFormula>AND(
ISPICKVAL(Contract.Type__c, &quot;Monthly&quot;),
ISBLANK(TEXT(Lease_Termination_Notice_Monthes__c))
)</errorConditionFormula>
    <errorDisplayField>Lease_Termination_Notice_Monthes__c</errorDisplayField>
    <errorMessage>Lease Termination Notice is required when the contract type is Monthly</errorMessage>
</ValidationRule>