force-app/main/default/objects/Opportunity/validationRules/Must_fill_reminderDate_if_lost_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_fill_reminderDate_if_lost_future</fullName>
    <active>false</active>
    <description>Must fill reminderDate if lost reason egale future potential deal
Duplicate with another picklist</description>
    <errorConditionFormula>ispickval(Loss_Reason__c, &quot;Future potiential deal&quot;) &amp;&amp;  ISBLANK(Reminder_Date__c )</errorConditionFormula>
    <errorMessage>Please enter a Reminder Date</errorMessage>
</ValidationRule>