force-app/main/default/objects/Opportunity/validationRules/Must_send_quote_to_pass_Proposal_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_send_quote_to_pass_Proposal_Stage</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ispickval(StageName,&apos;Proposal&apos;)) &amp;&amp;  ISBLANK(SyncedQuoteId) &amp;&amp; ischanged(StageName)</errorConditionFormula>
    <errorMessage>Please, insert your quote befor pass the stage</errorMessage>
</ValidationRule>