force-app/main/default/objects/Opportunity/validationRules/Negotitaion_requires_Quote_sync.validationRule-meta.xml
<ValidationRule>
    <fullName>Negotitaion_requires_Quote_sync</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  ISCHANGED(StageName  ) , ISPICKVAL(StageName  , &apos;Negotiation&apos;),ISBLANK( SyncedQuoteId ))</errorConditionFormula>
    <errorMessage>Before moving to the Negotiation stage please sync the chosen Quote</errorMessage>
</ValidationRule>