force-app/main/default/objects/Opportunity/validationRules/Number_of_members.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_members</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNULL(Number_of_members__c),  ISPICKVAL( StageName , &apos;Negotiation&apos;)  )</errorConditionFormula>
    <errorDisplayField>Number_of_members__c</errorDisplayField>
    <errorMessage>Add Number of members before moving to the negotiation Stage</errorMessage>
</ValidationRule>