force-app/main/default/objects/Opportunity/validationRules/Partner_and_Lead_Source_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_and_Lead_Source_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(ISBLANK(Referral_Contact__c),ISBLANK( Referral_Account__c ), ISPICKVAL(LeadSource,&quot;Broker deal&quot;)))</errorConditionFormula>
    <errorMessage>Please ensure that the Partner field is filled in if the Lead Source is &apos;Partner deal&apos;, and that the Lead Source is specified if an Partner is selected.</errorMessage>
</ValidationRule>