force-app/main/default/objects/Opportunity/validationRules/Periodic_Dates_change_block.validationRule-meta.xml
<ValidationRule>
    <fullName>Periodic_Dates_change_block</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL(Contract_Type__c ,&apos;Periodic&apos;) , OR( ISCHANGED( End_Date__c ), ISCHANGED( Start_Date__c ) ), Product_Count__c &gt;0)</errorConditionFormula>
    <errorMessage>Can not change periodic contract dates while products are present in the package builder</errorMessage>
</ValidationRule>