force-app/main/default/objects/Opportunity/validationRules/PrintsBW_empty_after_contractreview.validationRule-meta.xml
<ValidationRule>
    <fullName>PrintsBW_empty_after_contractreview</fullName>
    <active>true</active>
    <description>contractreview is required after contractreview stage</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(StageName, &quot;Contract Review&quot;),
        ISPICKVAL(StageName, &quot;Contract sent&quot;),
        ISPICKVAL(StageName, &quot;Deposit and Documents received&quot;)
    ),
    ISBLANK( Prints_B_W__c )
)</errorConditionFormula>
    <errorDisplayField>Prints_B_W__c</errorDisplayField>
    <errorMessage>Prints B&amp;W is required on this stage</errorMessage>
</ValidationRule>