force-app/main/default/objects/Opportunity/validationRules/Printscolors_Requi_after_contractrev.validationRule-meta.xml
<ValidationRule>
    <fullName>Printscolors_Requi_after_contractrev</fullName>
    <active>true</active>
    <description>prints is required after contract review stage</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(StageName, &quot;Contract Review&quot;),
        ISPICKVAL(StageName, &quot;Contract sent&quot;),
        ISPICKVAL(StageName, &quot;Deposit and Documents received&quot;)
    ),
    ISBLANK(Prints_Color__c )
)</errorConditionFormula>
    <errorDisplayField>Prints_Color__c</errorDisplayField>
    <errorMessage>Prints Color field is required on this stage</errorMessage>
</ValidationRule>