force-app/main/default/objects/Opportunity/validationRules/Renewal_oporutnity_Lost_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Renewal_oporutnity_Lost_reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(TEXT(Non_Renewal_Reason__c )),ISPICKVAL(StageName , &apos;Closed Lost&apos;),  ISCHANGED( StageName ),  OR( ISPICKVAL( Type , &apos;Renewal&apos;)))</errorConditionFormula>
    <errorDisplayField>Non_Renewal_Reason__c</errorDisplayField>
    <errorMessage>For type Renewal opportunities, you must first choose the &apos;Non-Renewal Reason&apos; to be able to close lost</errorMessage>
</ValidationRule>