force-app/main/default/objects/Opportunity/validationRules/Restoration_Fee_req_after_contractrevi.validationRule-meta.xml
<ValidationRule>
    <fullName>Restoration_Fee_req_after_contractrevi</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
       
        ISPICKVAL(StageName, &quot;Contract Review&quot;),
        ISPICKVAL(StageName, &quot;Contract sent&quot;),
        ISPICKVAL(StageName, &quot;Deposit and Documents received&quot;)
    ),
    ISBLANK(Restoration_Fee__c)
)</errorConditionFormula>
    <errorDisplayField>Restoration_Fee__c</errorDisplayField>
    <errorMessage>Restoration Fee is required on this stage</errorMessage>
</ValidationRule>