force-app/main/default/objects/Opportunity/validationRules/Set_Up_Fee_empty_after_negotiating.validationRule-meta.xml
<ValidationRule>
    <fullName>Set_Up_Fee_empty_after_negotiating</fullName>
    <active>true</active>
    <description>Set up fee is required after negotiating stage</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(StageName, &quot;Contract Review&quot;),
        ISPICKVAL(StageName, &quot;Contract sent&quot;),
        ISPICKVAL(StageName, &quot;Deposit and Documents received&quot;)
    ),
    ISBLANK(Set_Up_Fee__c)
)</errorConditionFormula>
    <errorDisplayField>Set_Up_Fee__c</errorDisplayField>
    <errorMessage>Set up Fee is required on this stage</errorMessage>
</ValidationRule>