force-app/main/default/objects/Opportunity/listViews/Copy_of_Acro_Tlv_Opportunities.listView-meta.xml
<ListView>
    <fullName>Copy_of_Acro_Tlv_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Interested_in__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>DepositAmount__c</columns>
    <columns>Calculated_Total_Price_Adjustment__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>Acro - TLV</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Standard_Opportunity</value>
    </filters>
    <label>TLV Acro Opportunities</label>
</ListView>